--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@fioprotocol/fio.sdk-lite-sandbox",
 	"version": "1.0.0",
+	"type": "module",
 	"dependencies": {
 		"@fioprotocol/fio-sdk-lite": "^1.0.0",
 		"crypto-browserify": "^3.12.1"
