--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist"
+    "noImplicitAny": false
   }
 }
