--- a/package.json
+++ b/package.json
@@ -2,8 +2,15 @@
 	"name": "@fioprotocol/fio.sdk-lite-sandbox",
 	"version": "1.0.0",
 	"type": "module",
+	"scripts": {
+		"build": "tsc"
+	},
+	"stackblitz": {
+		"startCommand": "export NODE_OPTIONS=--openssl-legacy-provider"
+	},
 	"dependencies": {
 		"@fioprotocol/fio-sdk-lite": "^1.0.0",
-		"crypto-browserify": "^3.12.1"
+		"crypto-browserify": "^3.12.1",
+		"typescript": "^5.6.3"
 	}
 }
